--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "abcjs": "^6.1.8",
     "blob-stream": "^0.1.3",
     "buffer": "^6.0.3",
+    "d3-scale-chromatic": "^3.0.0",
     "docx4js": "^3.2.20",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
